--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ background-repeat: no-repeat; background-size: 100% 100%; height:
 <center><!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="monetag" content="a1c40c008dcf30093aaa94e276f581f7">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HONOR TV</title>
