--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ background-repeat: no-repeat; background-size: 100% 100%; height:
     <meta name="monetag" content="a1c40c008dcf30093aaa94e276f581f7">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HONOR TV</title>
+    <title>NBA STREAM</title>
     <link rel="shorcut icon" type="x-icon" href="images/logo.png">
     <script src="scriptnba.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
