--- a/index.html
+++ b/index.html
@@ -1,46 +1,3 @@
-<div id="337568128777264851" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><div class="panel-default clearfix" style="background-image:
-url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjE43i2XXWJnHseUNY8eqys0_2vl7pD-fCpw&usqp=CAU');
-background-repeat: no-repeat; background-size: 100% 100%; height:
-760px;">
-
-<center><!DOCTYPE html>
-<html lang="en">
-<head>	
-<script src="https://ligheechoagool.com/88/tag.min.js" data-zone="146223" async data-cfasync="false"></script>
-    <meta name="monetag" content="a1c40c008dcf30093aaa94e276f581f7">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NBA STREAM</title>
-    <link rel="shorcut icon" type="x-icon" href="images/logo.png">
-    <script src="scriptnba.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.5/shaka-player.compiled.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/1.4.12/hls.min.js"></script>
-<link rel="stylesheet" href="stylenba.css">
-
-  <div id="wrapper">
-    <div id="title">🄽🄱🄰 🄻🄴🄰🄶🅄🄴 🄿🄰🅂🅂</div>
-<div class="app-container">
-	<div class="player-container">
-            <div class="video-container">
-                <video id="player" controls></video>
-				<div id="liveIndicator">LIVE</div>
-    <iframe id="youtube-player" frameborder="0" allowfullscreen></iframe>
-				</div>
-        </div>
-        <div class="channel-list-container">
-            <div class="search-container">
-                <input type="text" class="search-input" placeholder="Search for channels here...">
-            </div>
-            <ul class="channel-list" id="channelList">
-                <!-- Channel items will be populated by JavaScript -->
-            </ul>
-        </div>
-    </div>    
-	    
-
-     
-</body>
-</html></center>	
-	
+<script language="javascript">
+document.write( unescape( '%3C%64%69%76%20%69%64%3D%22%33%33%37%35%36%38%31%32%38%37%37%37%32%36%34%38%35%31%22%20%61%6C%69%67%6E%3D%22%63%65%6E%74%65%72%22%20%73%74%79%6C%65%3D%22%77%69%64%74%68%3A%20%31%30%30%25%3B%20%6F%76%65%72%66%6C%6F%77%2D%79%3A%20%68%69%64%64%65%6E%3B%22%20%63%6C%61%73%73%3D%22%77%63%75%73%74%6F%6D%68%74%6D%6C%22%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%70%61%6E%65%6C%2D%64%65%66%61%75%6C%74%20%63%6C%65%61%72%66%69%78%22%20%73%74%79%6C%65%3D%22%62%61%63%6B%67%72%6F%75%6E%64%2D%69%6D%61%67%65%3A%0A%75%72%6C%28%27%68%74%74%70%73%3A%2F%2F%65%6E%63%72%79%70%74%65%64%2D%74%62%6E%30%2E%67%73%74%61%74%69%63%2E%63%6F%6D%2F%69%6D%61%67%65%73%3F%71%3D%74%62%6E%3A%41%4E%64%39%47%63%52%6A%45%34%33%69%32%58%58%57%4A%6E%48%73%65%55%4E%59%38%65%71%79%73%30%5F%32%76%6C%37%70%44%2D%66%43%70%77%26%75%73%71%70%3D%43%41%55%27%29%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%72%65%70%65%61%74%3A%20%6E%6F%2D%72%65%70%65%61%74%3B%20%62%61%63%6B%67%72%6F%75%6E%64%2D%73%69%7A%65%3A%20%31%30%30%25%20%31%30%30%25%3B%20%68%65%69%67%68%74%3A%0A%37%36%30%70%78%3B%22%3E%0A%0A%3C%63%65%6E%74%65%72%3E%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%0A%3C%68%65%61%64%3E%09%0A%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%6C%69%67%68%65%65%63%68%6F%61%67%6F%6F%6C%2E%63%6F%6D%2F%38%38%2F%74%61%67%2E%6D%69%6E%2E%6A%73%22%20%64%61%74%61%2D%7A%6F%6E%65%3D%22%31%34%36%32%32%33%22%20%61%73%79%6E%63%20%64%61%74%61%2D%63%66%61%73%79%6E%63%3D%22%66%61%6C%73%65%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%6D%6F%6E%65%74%61%67%22%20%63%6F%6E%74%65%6E%74%3D%22%61%31%63%34%30%63%30%30%38%64%63%66%33%30%30%39%33%61%61%61%39%34%65%32%37%36%66%35%38%31%66%37%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%4E%42%41%20%53%54%52%45%41%4D%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%68%6F%72%63%75%74%20%69%63%6F%6E%22%20%74%79%70%65%3D%22%78%2D%69%63%6F%6E%22%20%68%72%65%66%3D%22%69%6D%61%67%65%73%2F%6C%6F%67%6F%2E%70%6E%67%22%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%73%63%72%69%70%74%6E%62%61%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%63%64%6E%6A%73%2E%63%6C%6F%75%64%66%6C%61%72%65%2E%63%6F%6D%2F%61%6A%61%78%2F%6C%69%62%73%2F%66%6F%6E%74%2D%61%77%65%73%6F%6D%65%2F%36%2E%30%2E%30%2F%63%73%73%2F%61%6C%6C%2E%6D%69%6E%2E%63%73%73%22%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%2F%3E%0A%20%20%20%20%20%3C%2F%73%74%79%6C%65%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%63%64%6E%6A%73%2E%63%6C%6F%75%64%66%6C%61%72%65%2E%63%6F%6D%2F%61%6A%61%78%2F%6C%69%62%73%2F%73%68%61%6B%61%2D%70%6C%61%79%65%72%2F%34%2E%33%2E%35%2F%73%68%61%6B%61%2D%70%6C%61%79%65%72%2E%63%6F%6D%70%69%6C%65%64%2E%6D%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%63%64%6E%6A%73%2E%63%6C%6F%75%64%66%6C%61%72%65%2E%63%6F%6D%2F%61%6A%61%78%2F%6C%69%62%73%2F%68%6C%73%2E%6A%73%2F%31%2E%34%2E%31%32%2F%68%6C%73%2E%6D%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%73%74%79%6C%65%6E%62%61%2E%63%73%73%22%3E%0A%0A%20%20%3C%64%69%76%20%69%64%3D%22%77%72%61%70%70%65%72%22%3E%0A%20%20%20%20%3C%64%69%76%20%69%64%3D%22%74%69%74%6C%65%22%3E🄽🄱🄰%20🄻🄴🄰🄶🅄🄴%20🄿🄰🅂🅂%3C%2F%64%69%76%3E%0A%3C%64%69%76%20%63%6C%61%73%73%3D%22%61%70%70%2D%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%09%3C%64%69%76%20%63%6C%61%73%73%3D%22%70%6C%61%79%65%72%2D%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%76%69%64%65%6F%2D%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%76%69%64%65%6F%20%69%64%3D%22%70%6C%61%79%65%72%22%20%63%6F%6E%74%72%6F%6C%73%3E%3C%2F%76%69%64%65%6F%3E%0A%09%09%09%09%3C%64%69%76%20%69%64%3D%22%6C%69%76%65%49%6E%64%69%63%61%74%6F%72%22%3E%4C%49%56%45%3C%2F%64%69%76%3E%0A%20%20%20%20%3C%69%66%72%61%6D%65%20%69%64%3D%22%79%6F%75%74%75%62%65%2D%70%6C%61%79%65%72%22%20%66%72%61%6D%65%62%6F%72%64%65%72%3D%22%30%22%20%61%6C%6C%6F%77%66%75%6C%6C%73%63%72%65%65%6E%3E%3C%2F%69%66%72%61%6D%65%3E%0A%09%09%09%09%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%63%68%61%6E%6E%65%6C%2D%6C%69%73%74%2D%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%73%65%61%72%63%68%2D%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%74%65%78%74%22%20%63%6C%61%73%73%3D%22%73%65%61%72%63%68%2D%69%6E%70%75%74%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%53%65%61%72%63%68%20%66%6F%72%20%63%68%61%6E%6E%65%6C%73%20%68%65%72%65%2E%2E%2E%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%75%6C%20%63%6C%61%73%73%3D%22%63%68%61%6E%6E%65%6C%2D%6C%69%73%74%22%20%69%64%3D%22%63%68%61%6E%6E%65%6C%4C%69%73%74%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%21%2D%2D%20%43%68%61%6E%6E%65%6C%20%69%74%65%6D%73%20%77%69%6C%6C%20%62%65%20%70%6F%70%75%6C%61%74%65%64%20%62%79%20%4A%61%76%61%53%63%72%69%70%74%20%2D%2D%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%2F%75%6C%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%3C%2F%64%69%76%3E%20%20%20%20%0A%09%20%20%20%20%0A%0A%20%20%20%20%20%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E%3C%2F%63%65%6E%74%65%72%3E%09%0A%09' ) );
+</script>
