--- a/In-dx.html
+++ b/In-dx.html
@@ -38,7 +38,10 @@ background-repeat: no-repeat; background-size: 100% 100%; height:
             </ul>
         </div>
     </div>    
-	    
+	 <div id="footer">
+      FOR INFO <a href="https://t.me/+4oQOSInaYTtlZjQ1" target="_blank">JOIN TELEGRAM GROUP</a> Enjoy Watching ...
+    </div>
+  </div>    
 
      
 </body>
