--- a/In-dx.html
+++ b/In-dx.html
@@ -39,7 +39,7 @@ background-repeat: no-repeat; background-size: 100% 100%; height:
         </div>
     </div>    
 	 <div id="footer">
-      FOR INFO <a href="https://t.me/+4oQOSInaYTtlZjQ1" target="_blank">JOIN TELEGRAM GROUP</a> Enjoy Watching ...
+      FOR MORE INFO <a href="https://t.me/+4oQOSInaYTtlZjQ1" target="_blank">JOIN TELEGRAM GROUP</a> Enjoy Watching ...
     </div>
   </div>    
 
