--- a/In-dx.html
+++ b/In-dx.html
@@ -37,15 +37,19 @@ background-repeat: no-repeat; background-size: 100% 100%; height:
                 <!-- Channel items will be populated by JavaScript -->
             </ul>
         </div>
-      </div>
+  </div>
   <script>function isInViewport(e){const t=e.getBoundingClientRect();return t.top>=0&&t.left>=0&&t.bottom<=(window.innerHeight||document.documentElement.clientHeight)&&t.right<=(window.innerWidth||document.documentElement.clientWidth)}function loadImages(){document.querySelectorAll(".defer-image").forEach(e=>{if(isInViewport(e)){const t=e.getAttribute("data-src");if(t){const n=new Image;n.src=t,n.onload=()=>{e.setAttribute("src",t),e.classList.remove("defer-image")}}}})}window.addEventListener("scroll",loadImages),window.addEventListener("resize",loadImages),loadImages();</script>
   <nav class="bottom-nav">
-  <a href="tg.html" class="nav-item">
-    <i class="fas fa-home"></i> TELEGRAM GROUP 
+  <a href="index.html" class="nav-item">
+    <i class="fas fa-home"></i> Home
+  </a>
+  <a href="tv.html" class="nav-item">
+    <i class="fas fa-broadcast-tower"></i> Live TV
+  </a>
+  <a href="nba.html" class="nav-item">
+    <i class="fas fa-film"></i> Sports Event
   </a>
 </nav>
-
-     
 </body>
 </html></center>	
 	
