--- a/In-dx.html
+++ b/In-dx.html
@@ -12,7 +12,7 @@ background-repeat: no-repeat; background-size: 100% 100%; height:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA STREAM</title>
     <link rel="shorcut icon" type="x-icon" href="images/logo.png">
-    <script src="scriptnba.js"></script>
+    <script src="scrt-nba.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
      </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.5/shaka-player.compiled.min.js"></script>
