--- a/In-dx.html
+++ b/In-dx.html
@@ -18,7 +18,13 @@ background-repeat: no-repeat; background-size: 100% 100%; height:
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.5/shaka-player.compiled.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hls.js/1.4.12/hls.min.js"></script>
 <link rel="stylesheet" href="stylenba.css">
-
+<div class="app-container">
+	<div class="player-container">
+            <div class="video-container">
+                <video id="player" controls></video>
+				<div id="liveIndicator">LIVE</div>
+    <iframe id="youtube-player" frameborder="0" allowfullscreen></iframe>
+				</div>
   
         
         <div class="channel-list-container">
