--- a/In-dx.html
+++ b/In-dx.html
@@ -26,7 +26,9 @@ background-repeat: no-repeat; background-size: 100% 100%; height:
     <iframe id="youtube-player" frameborder="0" allowfullscreen></iframe>
 				</div>
   
-        
+        </div>
+  <script>function isInViewport(e){const t=e.getBoundingClientRect();return t.top>=0&&t.left>=0&&t.bottom<=(window.innerHeight||document.documentElement.clientHeight)&&t.right<=(window.innerWidth||document.documentElement.clientWidth)}function loadImages(){document.querySelectorAll(".defer-image").forEach(e=>{if(isInViewport(e)){const t=e.getAttribute("data-src");if(t){const n=new Image;n.src=t,n.onload=()=>{e.setAttribute("src",t),e.classList.remove("defer-image")}}}})}window.addEventListener("scroll",loadImages),window.addEventListener("resize",loadImages),loadImages();</script>
+
         <div class="channel-list-container">
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Search for channels here...">
@@ -34,6 +36,7 @@ background-repeat: no-repeat; background-size: 100% 100%; height:
             <ul class="channel-list" id="channelList">
                 <!-- Channel items will be populated by JavaScript -->
             </ul>
+	</div>
         </div>
     <nav class="bottom-nav">
   <a href="tg.html" class="nav-item">
